--- a/mobile-first-test/css/app.css
+++ b/mobile-first-test/css/app.css
@@ -5,10 +5,9 @@
 }
 
 .main-wrapper {
-  width: 375px;
+  max-width: 995px;
   margin: auto;
 }
-
 .top-bar {
   display: flex;
   justify-content: space-between;
@@ -46,8 +45,12 @@
   width: 100%;
   background-image: url("../img/Background.svg");
   background-repeat: no-repeat;
-  padding: 80px 16px;
+  background-size: cover;
+  padding: 80px 0px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.1));
+}
+.body-inner {
+  margin-left: 16px;
 }
 .main-title {
   font-size: 36px;
